# 32_1_json

./: .gitignore  CMakeLists.txt  CMakeLists_for_embedded_nlohmann.txt  films.json  main.cpp
